@@ -181,7 +181,8 @@ enum  utilVarType {BOOLVAR=0,INTVAR,CHARVAR,MULTVAR,BADTYPE,DECIMALOUT,HEXOUT,OC
 #define	TOOL_INSERT_MASK 0b10111
 #define	TOOL_VIEW_OP 16
 
-
+#define DEBUGSTR(x) QTextStream(stderr) << x << Qt::endl;
+//#define DEBUGSTR(x)
 
 //enum toolEnums {TOOL_NAME=0,TOOL_COMMAND,TOOL_COMMENT,TOOL_IN_TERM,TOOL_FLAGS,TOOL_INPOPUP,TOOL_ALWAYS_IN_POPUP,TOOL_CLEAR_VIEW,TOOL_RUN_AS_ROOT,TOOL_USE_BAR,TSHORTCUTKEY};
 enum toolEnums {TOOL_ALWAYS_IN_POPUP=0,TOOL_CLEAR_VIEW,TOOL_COMMAND,TOOL_COMMENT,TOOL_FLAGS,TOOL_INPOPUP,TOOL_IN_TERM,TOOL_NAME,TOOL_RUN_AS_ROOT,TOOL_SHORTCUT_KEY,TOOL_USE_BAR,TOOL_END};
