@@ -3,7 +3,7 @@ search forward/back checkbox
 tools
 history
 recent
-window subclass
+window subclass ?
 
 plugins
 my hilighting
